[package]
name = "sassruist"
version = "0.1.0"
authors = [ "mpg-tomoya-komiyama <tomoya.komiyama@medpeer.co.jp>" ]
edition = "2018"

[dependencies]
clap = "2.33.0"
regex = "1.1.7"
wasm-bindgen = "0.2.47"

[lib]
name = "sassruist"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sassruist"
path = "src/bin.rs"
